# master_experiment2025

./: .gitignore  Mshu.2002140619  Mshu.2002140619.pub  README.md  ScreenCamera_2025-08-15-00-59-39.json  ScreenCamera_2025-08-15-00-59-59.json  directory_structure.txt  dt_str.py  requirements.txt  test.py  train.py
Compress/Octree/3d-octree-compression/: .gitignore  CMakeLists.txt  LICENSE  README.md  directory_structure.txt  main.cc
Compress/Octree/3d-octree-compression/include/glad/: glad.h
Compress/Octree/3d-octree-compression/src/: CompressedModel.cc  Model.cc  ModelManager.cc  OBJLoader.cc  OctreeCompressor.cc  OctreeVisualizer.cc  glad.c
DQN/: agent.py  env_compare.py  env_ours.py  environment.py
Directly/: directory_structure.txt
Display/: pcd_data.py  pcv.py  pcv_pts.m
InternalSystem/: action_generate.py  file_setup.py  gaussian_weight.py  gaze_prediction.py  graph_plot.py  learning_rate.py  load_trace.py  multi_replay.py  other_cal.py  qoe_cal.py  rate_simu.py
Mine/Display/: off_data.py  pcd_data.py  pcv.py
Mine/Voxel/: voxelize.cpp  voxelize.py
Mine/assist/: time.py
Mine/data_expand/: test.py
Mine/data_expand/DownSample/: partial.py  test.py
Mine/data_expand/Noise/: add_noise.py
Mine/data_expand/RepKPU_Data/: downsampling.py  multi.py  nonuniform.py  partial_ds.py
Mine/data_expand/Translate/: off2pcv.py  pts2pcv.py
Mine/demo/: floor.py  off2pcv.py  pts2pcv.py
Mine/demo/ModelNet40/: airplane_0627.pcd  bathtub_0107.pcd  cone_0001.pcd  (+3 more)
Mine/density/: detect.py  detect2.py  kde.py  ranking.py  utility.py
Mine/directly/: directory_structure.txt
Mine/down_data/: fps_downsample.pcd  random_downsample.pcd  voxel_fps_selected.pcd
Mine/expand/: app.py  test.py
RepKPU/: directory_structure.txt  dt_str.py  requirements.txt  test.py
System/Client_side/: client.py
System/Server_side/: server.py
assist/: time.py
data_expand/: file_road.py  off2pcv.py  test.py
data_expand/DownSample/: partial.py
dataset/: off2pcv.py
demo/: pcv.py
density/: CLI.py  IO.py  cal_den.py  csv_npz.py  detect.py  utility.py
density/visual/: display.py
(+888 files in other folders)
